# xentu-engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CORE_GOALS.md  EXECUTION_PROCESS.md  LICENSE.txt  RCa24560  README.md  build-debug.bat  gcc-run-test.bat  main.cpp  meson.build  meson_options.txt  miniaudio.h  resource.h  resource.rc  setup-lua.sh  setup-machines.py  setup-machines.sh  setup.sh  test.sh  version-sdk.rc.in  version.rc.in
assets/: game.js  game.json  game.lua  game.py  module1.py  module2.py  sdl-example.cpp  test.lua  test.py  xentu.py
assets/scripts/: test.js  test.lua
assets/scripts/javascript/: game.js  test.js
assets/scripts/js/: test.js
assets/scripts/lua/: game.lua  test copy.lua  test.lua  test2.lua
assets/scripts/python/: test.py  test2.py
assets/sprite_map/: zombie1.xsf
cmake/: FindEmbed.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindLUA.cmake
data/: Config.toml  Game.lua  Game_New.lua  brick-breaker-level1.tmx  second.lua
data/Fonts/: arial_20.json
data/Images/: 511-256x256.json
data/Shaders/: FragmentShader.shader
data/custom-shader/: fragment.shader
data/examples-new/visual-novel/: game.lua
data/examples/01_tilemap/: game.lua
data/examples/flappy-bird/: config.toml  game.lua
data/examples/platformer/: config.toml  game.lua  map.lua  player.lua
data/examples/pong/: config.toml  game.lua
data/old/: game.lua
data/test/: config.toml  game.lua
demos/01_tilemaps/: game.js  game.json  game.lua  game.py
demos/audio/: audio.js  audio.lua  audio.py  game.json
demos/game-blocks/: blocks.js  functions.js  game.js  game.json  lookup_table.js
demos/input/: game.json  input.js  input.lua  input.py
demos/main/: game.json
demos/spritemaps/: game.json  spritemaps.js  spritemaps.lua  spritemaps.py
demos/text/: game.json  text.js  text.lua  text.py
demos/tilemaps/: editor.json  game.json  game.lua  game.py  tilemaps.js  tilemaps.lua  tilemaps.py
dev_notes/: EXECUTION_PROCESS.md  FUNCTION_LIST.md  TESTS.md  TEST_LIST.md  TODO_LIST.md
docs/: .htaccess
docs/source/: code-reference.rst  conf.py  core-goals.rst  getting-started.rst  how-it-works.rst  index.rst  installation.rst  introduction.rst  jargon.rst  lua-code-reference.rst  making-games.rst  using-the-sdk.rst
installers/: installer-config-gcc-nsis.ibf  installer-win-gcc.ibf  installer-win-msvc.ibf  make-darwin.sh  make-deb.sh  make-win-gcc.sh  make-win-msvc.sh  make-x86-darwin.sh  make-x86-deb.sh  make-x86-mac.sh
lib/: rang.h
lib/luna/: luna.hpp
src/: Application.cpp  Config.cpp  Config.h  Exceptions.h  Game.cpp  Game.h  Globals.cpp  Globals.h  Helper.hpp  LuaEnums.hpp  Machine.cpp  Machine.h  Renderer.cpp  Renderer.h  StartupLua.h  StartupLua.hpp  StringUtils.cpp  StringUtils.h  Xentu.cpp  Xentu.h  XentuConfig.cpp  XentuConfig.h  XentuExceptions.h  XentuGame.cpp  XentuGame.h  XentuGame.hpp  XentuMachine.cpp  XentuMachine.h  XentuRenderer.cpp  XentuRenderer.h
src/assets/: AssetManager.cpp  AssetManager.h
src/audio/: AudioManager.cpp  AudioManager.h  AudioPlayer.cpp  AudioPlayer.h  AudioPlayer.hpp  Sound.cpp  Sound.hpp
src/filesystem/: AssetManager.cpp  AssetManager.h  AssetManager.hpp  Configuration.cpp  Configuration.h  Configuration.hpp
src/fs/: XenFile.h  XenFileInfo.h  XenFileSystem.h  XenMemoryFile.h  XenMemoryFileSystem.h  XenNativeFile.cpp  XenNativeFile.h  XenNativeFileSystem.h  XenStringUtils.h  XenVirtualFileSystem.cpp  XenVirtualFileSystem.h  XenZipFile.cpp  XenZipFile.h  XenZipFileSystem.h
src/game/: XentuGame.h
src/graphics/: Batch.h  Batch.hpp  Color.cpp  Color.h  LuaFont.h  Quad.cpp  Quad.h  Quad.hpp  Rect.cpp  Rect.h  Rect.hpp  Renderer2D.cpp  Renderer2D.h  Renderer2D.hpp  Sprite.cpp  Sprite.h  Sprite.hpp  SpriteMap.cpp  SpriteMap.h  SpriteMap.hpp  SpriteMapGroup.cpp  SpriteMapGroup.h  TextBox.cpp  TextBox.h  Texture.cpp  Texture.h  Texture.hpp  Tile.h  TileMap.cpp  TileMap.h  TileMapLayer.cpp  TileMapLayer.h  TileMapObject.cpp  TileMapObject.h  Transform.cpp  Transform.h  Transform.hpp  Transformable.cpp  Transformable.h  Transformable.hpp  (+8 more)
src/input/: GamepadState.cpp  GamepadState.h  InputManager.cpp  InputManager.h  InputManager.hpp  KeyboardManager.cpp  KeyboardManager.h  MouseManager.cpp  MouseManager.h  MouseState.cpp  MouseState.h
src/lua/: LuaColor.h  before_init.lua  startup.lua
src/machines/: JavaScriptMachine.cpp  JavaScriptMachine.h  JavaScriptMachineInterop.cpp  JavaScriptMachineScripts.h  JavaScriptMachineScripts.h.Scenes.js  JavaScriptMachineScripts.h.js  LuaMachine.cpp  LuaMachine.h  LuaMachineInterop.cpp  LuaMachineInterop.h  LuaMachineScript.h  LuaMachineScript.h.Scenes.lua  LuaMachineScript.h.lua  LuaMachineScriptLib.h  PythonMachine.cpp  PythonMachine.h  PythonMachineInterop.cpp  PythonMachineScripts.h  PythonMachineScripts.h.Scenes.py  PythonMachineScripts.h.py  XentuJavaScriptMachine.cpp  XentuJavaScriptMachine.h  XentuJavaScriptMachineInterop.cpp  XentuJavaScriptMachineScripts.h  XentuLuaMachine.cpp  XentuLuaMachine.h  XentuLuaMachineInterop.cpp  XentuLuaMachineInterop.h  XentuLuaMachineScript.h  XentuPythonMachine.cpp  XentuPythonMachine.h  XentuPythonMachineInterop copy.cpp  XentuPythonMachineInterop.cpp  XentuPythonMachineScripts.h
src/renderers/: DefaultRenderer.cpp  DefaultRenderer.h  DefaultTextBox.cpp  DefaultTextBox.h  XentuSDLRenderer.cpp  XentuSDLRenderer.h  XentuSDLRendererAssets.h  XentuSDLTextBox.cpp  XentuSDLTextBox.h
src/resources/: before_init.lua  classes.lua
src/vfs/: VFS.h  XenFile.h  XenFileInfo.cpp  XenFileInfo.h  XenFileSystem.h  XenMemoryFile.cpp  XenMemoryFile.h  XenMemoryFileSystem.cpp  XenMemoryFileSystem.h  XenNativeFile.cpp  XenNativeFile.h  XenNativeFileSystem.cpp  XenNativeFileSystem.h  XenStringUtils.cpp  XenStringUtils.h  XenVirtualFileSystem.cpp  XenVirtualFileSystem.h  XenZipFile.cpp  XenZipFile.h  XenZipFileSystem.cpp  XenZipFileSystem.h
src/xentu/: Application.cpp  Helper.h  XentuGame.cpp  XentuGame.h  XentuScene.cpp  XentuScene.h  realpath.h  version.rc.in
src/xentusdk/: Application.cpp  functions.cpp  main.cpp  templates.h
(+152 files in other folders)
